hydro2/hydro2-network-wire-derive/tests/trybuild/fail_non_string.stderr
error: expected string literal
 --> tests/trybuild/fail_non_string.rs:8:26
  |
8 | #[available_operators(op=123)]
  |                          ^^^
