hydro2/hydro2-network-wire-derive/tests/trybuild/fail_non_string.rs
// ---------------- [ File: tests/trybuild/fail_non_string.rs ]
// tests/trybuild/fail_non_string.rs

use hydro2_network_wire_derive::NetworkWire;
use std::marker::PhantomData;

#[derive(NetworkWire)]
#[available_operators(op=123)]
pub struct MyWire<T> {
    _p: PhantomData<T>,
}

fn main() {}
